<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    tools:context=".friends.FriendsPageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="261dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:title="Friends" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/friends_filter_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleCentered="true">

            <TextView
                android:id="@+id/friendsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/friends_filter_bar"
                app:layout_constraintTop_toTopOf="@+id/friends_filter_bar" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/friendsTextView"
                app:layout_constraintEnd_toEndOf="@+id/add_button"
                app:layout_constraintStart_toStartOf="@+id/friendsTextView"
                app:layout_constraintTop_toTopOf="@+id/friendsTextView"
                android:layout_marginRight="100dp"

                >

                <Button
                    android:id="@+id/show_friend_list"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_300"
                    app:icon="@drawable/ic_baseline_people_24"
                    tools:ignore="TouchTargetSizeCheck"
                    app:strokeColor="@color/purple_300"
                    android:paddingLeft="30dp"
                    />

                <Button
                    android:id="@+id/show_friend_request_send_list"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_300"
                    app:icon="@drawable/ic_baseline_send_24"
                    tools:ignore="TouchTargetSizeCheck"
                    app:strokeColor="@color/purple_300"
                    android:paddingLeft="30dp"/>

                <Button
                    android:id="@+id/show_friend_request_receive_list"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_300"
                    app:icon="@drawable/ic_baseline_call_received_24"
                    tools:ignore="TouchTargetSizeCheck"
                    app:strokeColor="@color/purple_300"
                    android:paddingLeft="30dp"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>


            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_300"
                android:text="@string/add_friend"
                app:icon="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="@+id/friendsTextView"
                app:layout_constraintEnd_toEndOf="@+id/friendsTextView"
                app:layout_constraintHorizontal_bias="0.944"
                app:layout_constraintStart_toStartOf="@+id/friendsTextView"
                app:layout_constraintTop_toTopOf="@+id/friendsTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/search_bar_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="#E8DEF8"
                android:iconifiedByDefault="false"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:queryBackground="@android:color/transparent"
                android:queryHint="@string/search"
                android:singleLine="true"
                app:layout_constraintTop_toTopOf="@+id/search_bar"
                app:startIconDrawable="@drawable/search_48px" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friends_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/search_bar_text" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:padding="10dp" />
        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabut"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        app:backgroundTint="@color/purple"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/budget"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addReceipts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottom_navigation"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ScanReceipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:alpha="0.0"
        android:enabled="false"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintBottom_toTopOf="@+id/addReceipts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:title="Home" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:alpha="0.0"
        android:enabled="false"
        android:src="@drawable/ic_baseline_post_add_24"
        app:layout_constraintBottom_toTopOf="@+id/ScanReceipt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:title="Home" />

</androidx.constraintlayout.widget.ConstraintLayout>