...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.19999999"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameCredential"
        app:layout_constraintVertical_bias="0.050000012"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/passwordCredential"
        app:layout_constraintTop_toBottomOf="@+id/passwordCredential" />

    <!-- attempt login -->
    <Button
        android:id="@+id/checkCredentials"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordCredential"
...
