...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="5">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/friend_card_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:cardElevation="3dp"
            android:layout_weight="5"
            android:background="@color/purple_300"
...
