...
    <string name="cancel">Cancel</string>
    <string name="add_date">Add Important Date</string>
    <string name="edit">Edit</string>
    <string name="split_bill">Split Bill</string>
    <string name="home">Home</string>
    <string name="all">ALL</string>
    <string name="receipts">Receipts</string>
    <string name="budget">Budget</string>
    <string name="friends">Friends</string>
    <string name="items">Items</string>
    <string name="sort_by">Sort By</string>
    <string name="request">Friend Requests</string>
    <string name="add_friend">Add</string>
    <string name="receipts_sort">Receipts Sort</string>
    <string name="items_sort">Items Sort</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="filter">Filter</string>
    <string name="active_filters">Active Filters</string>
    <string name="date_title">Date</string>
    <string name="start_date">Start Date</string>
...
