...
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/receipts_sort_by_and_filter_bar"
            app:layout_constraintTop_toTopOf="@+id/receipts_sort_by_and_filter_bar" />

        <Button
            android:id="@+id/sort_by_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#6750A4"
            android:text="@string/sort_by"
            app:icon="@drawable/sort_48px"
...
            android:queryHint="@string/search"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="@+id/search_bar"
            app:startIconDrawable="@drawable/search_48px" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/receipts_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/search_bar_text" />

...
