...
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/receipts_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
